--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "swiper": "^11.2.8",
+    "use-debounce": "^10.0.4",
     "zod": "^3.25.36",
     "zustand": "^5.0.5"
   },
